# beardist

./: .beardist.json  Cargo.toml  Dockerfile  Justfile  README.md  clippy.toml  docker-bake.hcl  multify.sh  recipe.json  repack.sh
.forgejo/workflows/: build.yml
.github/workflows/: build.yml
src/: cargo.rs  command.rs  forgejo.rs  github.rs  homebrew.rs  indented_writer.rs  k8s.rs  main.rs  system.rs  target_spec.rs  utils.rs
src/homebrew/: tests.rs
