[package]
name = "beardist"
version = "1.1.0"
edition = "2024"

[dependencies]
camino = "1.1.9"
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
log = "0.4.27"
owo-colors = "4.2.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
env_logger = "0.11.8"
convert_case = "0.8.0"
eyre = "0.6.12"
serde_json = "1.0.140"
fs-err = "3.1.0"
ignore = "0.4.23"
tempfile = "3.19.1"
indexmap = "2.9.0"
timelord = { version = "3.0.2" }
glob = "0.3.2"
rand = "0.9.1"
hostname = "0.4.1"
sys-info = "0.9.1"
regex = "1.11.1"
semver = "1.0.26"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.19.1"
